updating conditional probability

--- a/module-2/5. Combinatorics and Probability.ipynb
+++ b/module-2/5. Combinatorics and Probability.ipynb
@@ -4,42 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rule of probability"
+    "# Combinatorics and Probability"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assume want to know the probability of exactly three heads. \n",
+    "### Problem \n",
     "\n",
-    "number of outcomes we care about/total outcomes"
+    "What is the probability of getting three 3 of 8 heads?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Calculate outcomes we care about \n",
+    "#### First Technique \n",
     "\n",
-    "How many different ways of 8 can we choose 3 to be successful.  \n",
+    "$\\frac{relevant outcomes}{total outcomes}$\n",
     "\n",
-    "8 choose 3 to be successful.  And then have 8!/3!5!\n",
+    "A. Calculate outcomes we care about \n",
     "\n",
-    "2. Calculate number of outcomes\n",
+    "* How many different ways of 8 can we choose 3 to be successful.  \n",
+    "    > 8 choose 3 to be successful.  And then have 8!/3!5!\n",
     "\n",
-    "Total number of outcomes is 2^8\n",
+    "B. Calculate number of outcomes\n",
     "\n",
-    "3. Divide the two of these\n",
+    "> Total number of outcomes is 2^8\n",
     "\n",
-    "7/32 = 0.21875"
+    "C. Divide the two of these\n",
+    "\n",
+    "> 7/32 = 0.21875"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or in general for a coin flip problem it's n!/k!(n - k)! /2^n \n",
+    "General rule for coin flip problem: \n",
+    "* Total outcomes we care about:  $n!/k!(n - k)!$\n",
+    "* Total number of outcomes:  $2^n$\n",
     "\n",
     "And note for a three sided coin would be 3^n."
    ]
@@ -49,16 +54,22 @@
    "metadata": {},
    "source": [
     "### Different technique\n",
-    "1. Probability an event we can about happening \n",
-    "2. Calculate outcomes we care about \n",
-    "How many different ways of 8 can we choose 3 to be successful.  \n",
-    "3. Multiply these two"
+    "1. Probability of one success occurring \n",
+    "    * What is the probability that a specific occurrence of  \n",
+    "    Eg. $(s)(s)(s)(f)(f)(f)(f)(f)$\n",
+    "2. Number of different successes\n",
+    "    * How many different ways of 8 can we choose 3 to be successful.  \n",
+    "3. Multiply these two\n",
+    "    * Because each of these outcomes is disjoint, we add can add the probability of the number of disjoint outcomes."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "B. Application\n",
+    "\n",
+    "1. Probability of distinct outcome occurring\n",
     "(.5)(.5)(.5)*(.5)(.5)(.5)(.5)(.5)"
    ]
   },
@@ -85,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Number of ways it can occur"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -107,6 +125,13 @@
     "math.factorial(5)\n",
     "\n",
     "40320/720"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Multiply number of ways times by probability of each"
    ]
   },
   {
@@ -142,6 +167,13 @@
    "source": [
     "### Now can move onto unequal probabilities \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagine that there is a .40 percent chance of success.  Now let's calculate the likelihood of 3 successes using this second tehcnique.  "
    ]
   }
  ],
