add functional lectures

--- a/module-1/Scope.ipynb
+++ b/module-1/Scope.ipynb
@@ -4,25 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Bayes Rule"
+    "The dir() method tells us what is in scope."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "globals()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Bayes Rule and Combinatorics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Resources\n",
-    "\n",
-    "https://www.math.lsu.edu/~madden/M3355spr2011/Lecture-6.pdf\n",
-    "\n",
-    "Khan Academy Problem of given that we pulled out a red marble, what is the probability of picking the correct bag."
+    "Returns just the global variables "
    ]
   },
   {
