--- a/module-2/4. Conditional Probability and Independent Probability.ipynb
+++ b/module-2/4. Conditional Probability and Independent Probability.ipynb
@@ -46,6 +46,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What is the chance of an event E happening, given I have already observed another event F."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now with conditional probability, we are essentially focusing on a row or a column."
    ]
   },
@@ -77,6 +84,35 @@
    "metadata": {},
    "source": [
     "> A useful tip is to name the probabilities.  What is P(A) and what is P(B)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Can apply this to the Netflix problem.  Given that someone has watched one The Matrix, what is the probability that they will watch Jurasic Park.  \n",
+    "\n",
+    "> Perhaps can provide them with a dataset, and ensure they are trying to gather the correct data.  P(A) = Watching the Matrix.  P(A & B) = P(Watching Matrix and Jurrassic Park).   \n",
+    "\n",
+    "> * Then also can do this with watching and liking Jurrassic Park.  \n",
+    "\n",
+    "P(E|F) = P(EF)/P(F) = \n",
+    "$\\frac{\\frac{people who liked both}{people who watched both}}{\\frac{people who liked amelie}{people who watched amelie}}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. The chain rule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $P(EF) = P(E | F) P(F)$ \n",
+    "    * States that the probability of observing events E and F is the probability of observing F, times the probability of observing E given that we observed F. "
    ]
   },
   {
@@ -121,15 +157,9 @@
    "source": [
     "### Resources\n",
     "\n",
-    "https://www.math.lsu.edu/~madden/M3355spr2011/Lecture-5.pdf"
+    "https://www.math.lsu.edu/~madden/M3355spr2011/Lecture-5.pdf\n",
+    "https://web.stanford.edu/class/archive/cs/cs109/cs109.1166//pdfs/07%20CondProbability.pdf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
