--- a/module-2/3. Probability Theory.ipynb
+++ b/module-2/3. Probability Theory.ipynb
@@ -75,6 +75,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Can add the mutual exclusion piecture from [here](https://www.youtube.com/watch?v=bX7iqWlzC0c&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh&index=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Probability measure  (three big rules)\n",
     "\n",
     "* P($\\varnothing$) = 0 and P($\\Omega$) = 1\n",
