--- a/module-2/4. Conditional Probability and Independent Probability.ipynb
+++ b/module-2/4. Conditional Probability and Independent Probability.ipynb
@@ -46,7 +46,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the chance of an event E happening, given I have already observed another event F."
+    "What is the chance of an event E happening, given I have already observed another event F.\n",
+    "\n",
+    "**Importance** This is a greatest hit of probability because it allows us to update our beliefs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P(E | F)\n",
+    "\n",
+    "* We do this by taking our sample space and narrowing it down to the sets of things in F\n"
    ]
   },
   {
@@ -64,7 +75,32 @@
     "\n",
     "$$\n",
     "P(B|A) = \\frac{P(A \\cap B)}{P(A)}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "From here we can get to chain rule by multiplying equation by P(A), so then \n",
+    "\n",
+    "$$\n",
+    "P(EF) = P(E|F)P(F)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "    * The chain rule states that the probability of observing events E and F is the probability of observing F, times the probability of observing E given that we observed F. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What is the probability of two dice summing to four, given the first die is 2.\n",
+    "\n",
+    "Then it's 1/6"
    ]
   },
   {
@@ -90,6 +126,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2. Spam problem [video](https://www.youtube.com/watch?v=wB0z0nQebNc&index=3&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh)\n",
+    "\n",
+    "24 emails are each sent to four users, 6 emails for each user.  Ten of the emails are spam.\n",
+    "$$P(E) = (10 C 3)(14 C 3)/(24 C 6)$$\n",
+    "\n",
+    "Numerator - is with product rule of counting.\n",
+    "\n",
+    "Now let's add a honey pot email address...so given that the honey pot gets six of the spam emails, what is the probability the non-honeypot gets a spam email.  \n",
+    "\n",
+    "\n",
+    "So now what is P(E | F)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Practice with the chain rule [video](https://www.youtube.com/watch?v=wB0z0nQebNc&index=3&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh)\n",
+    "\n",
+    "Card piles problem, what is the probability that with four piles, there is an ace of spades in each pile.\n",
+    "\n",
+    "P(A & B & C & D) = P(A) * P(B|A) * P(C | A & B) * P(D | A & B & C)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Conditional Probability with netflix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A. What is the probability that someone likes jurrassic park\n",
+    "P(E) = # who watched/ # who liked\n",
+    "\n",
+    "B. But we want to know the probability that you liked the movie \n",
+    "\n",
+    "(% who liked JP and the matrix)/(% who liked JP)\n",
+    "\n",
+    "So now we update the probabilities of all of the rest of these movies.\n",
+    "\n",
+    "> **Problem with this** is that you like a lot of movies..and if see your entire combination of movies you liked then there are not a lot of people with that combination of movies...so will need to alter this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> Can apply this to the Netflix problem.  Given that someone has watched one The Matrix, what is the probability that they will watch Jurasic Park.  \n",
     "\n",
     "> Perhaps can provide them with a dataset, and ensure they are trying to gather the correct data.  P(A) = Watching the Matrix.  P(A & B) = P(Watching Matrix and Jurrassic Park).   \n",
@@ -98,21 +187,6 @@
     "\n",
     "P(E|F) = P(EF)/P(F) = \n",
     "$\\frac{\\frac{people who liked both}{people who watched both}}{\\frac{people who liked amelie}{people who watched amelie}}$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. The chain rule"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* $P(EF) = P(E | F) P(F)$ \n",
-    "    * States that the probability of observing events E and F is the probability of observing F, times the probability of observing E given that we observed F. "
    ]
   },
   {
@@ -138,6 +212,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note also that independence means that P(A) = P(A|B) and P(B) = P(B|A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "|               | $B$           | $B^c$            |\n",
     "| ------------- |:-------------:| -----:|\n",
     "| $A$           | $P(A \\cap B)$  |$P(A \\cap B^ c)$ |\n",
@@ -149,6 +230,13 @@
    "metadata": {},
    "source": [
     "Answer the question of whether the events are independent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can see chris's pictoral explanation of independence [here](https://www.youtube.com/watch?v=bX7iqWlzC0c&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh&index=4).  Note that he keeps going pictorally to ask if things are independent."
    ]
   },
   {
