--- a/module-2/5. Combinatorics and Probability.ipynb
+++ b/module-2/5. Combinatorics and Probability.ipynb
@@ -53,6 +53,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Note that we can often calculate probability assuming ordered or unordered\n",
+    "\n",
+    "* See [Chris on twinkies and ding dongs](https://www.youtube.com/watch?v=oYXYLljkC48&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh&index=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Different technique\n",
     "1. Probability of one success occurring \n",
     "    * What is the probability that a specific occurrence of  \n",
@@ -175,6 +184,23 @@
    "source": [
     "Imagine that there is a .40 percent chance of success.  Now let's calculate the likelihood of 3 successes using this second tehcnique.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you have distinct elements, more likely than not, you end up in an **equally likely situation** \n",
+    "\n",
+    "When you have indistinct elements, more likely than not have a **nonequally likely** situation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
