--- a/module-2/6. Bayes Rule (and combinatorics).ipynb
+++ b/module-2/6. Bayes Rule (and combinatorics).ipynb
@@ -11,7 +11,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If have a sample space S and two events E and F.  \n",
+    "\n",
+    "Can think of E as two parts\n",
+    "\n",
+    "1. Most common form \n",
+    "\n",
+    "P(F | E) = P(EF)/P(E) = P(E|F)P(F)/P(E)\n",
+    "* via chain rule\n",
+    "\n",
+    "\n",
+    "2. Then\n",
+    "\n",
+    "1. E and F - that intersection.  \n",
+    "2. E, but not F.\n",
+    "\n",
+    "P(E) = P(E & F) + P(E & $F^c$)\n",
+    "\n",
+    " = P(E) = P(E|F)P(F) + P(E|$F^c$)P(F$^c$)\n",
+    "\n",
+    "3. So can also write Bayes as \n",
+    "$\\frac{P(E|F)P(F)}{P(E|F)P(F) + P(E|$F^c)P(F^c)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. HIV testing example See video at [1 hour mark](https://www.youtube.com/watch?v=wB0z0nQebNc&index=3&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh)\n",
+    "\n",
+    "Example that you have HIV given that you test positive.  This is what you want to know, but very hard to know. \n",
+    "\n",
+    "E = test positive for HIV with test\n",
+    "F = you have hiv \n",
+    "\n",
+    "$P(F|E) = \\frac{P(F)P(E|F)}{P(E|F)P(F) + P(E|F^c)P(F^c)} $\n",
+    "\n",
+    "* So the numerator is the probability of a true positive.\n",
+    "* And the denominator is the probability of the event of testing positive.\n",
+    "* Becuase many people don't have hiv and 1% false positive.  The event of testing positive is still kinda large to a true positive.  \n",
+    "So P(F|E) = .330\n",
+    "\n",
+    "> You can practically, showing by multiplying this out, and showing what this happens for 1k people.\n",
+    "\n",
+    "> Also can ask to calculate the probability of having the disease given you test negatively (which is quite small)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Bayes rule with spam\n",
+    "\n",
+    "So simple spam detection \n",
+    "60% of all email is spam, with 90% of spam having a forged header\n",
+    "And 20% of non spam having a forged header\n",
+    "\n",
+    "So what's probability of really the case, given the evidence.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[you got to here](https://www.youtube.com/watch?v=wB0z0nQebNc&index=3&list=PLcmJYc2muOR9H96hGlUBV2DkviVZFmHAh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. DNA Paternity Testing\n",
+    "\n",
+    "Child is born with, $B_{Aa}$\n",
+    "Mother has (A, A)\n",
+    "The big A, 100% came from the mother.\n",
+    "\n",
+    "Now question is, what is the P(D1|B_{Aa})\n",
+    "\n",
+    "P(B_{Aa}|D1)*P(D1)/$P(B_Aa)$\n",
+    "\n",
+    "\n",
+    "Your guess: \n",
+    "* $P(B_{Aa}|D1) = 1$\n",
+    "* $P(B_{Aa}|D2) = .5$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditional dependence \n",
+    "\n",
+    "* Dependence means that when we know a fact about one variable, it changes the likelihood of another variable.\n",
+    "\n",
+    "* Conditional dependence means that when we condition on one item, knowing about a second item changes the likelihood of a third item.\n",
+    "\n",
+    "##### 1. Example one\n",
+    "* **So an example** of this could be that having malaria does not change likelihood of having a bacteria.  \n",
+    "\n",
+    "* But now conditioning on fever.  So now we say everyone must have malaria or bacteria.  So P(Malaria|Fever) now skyrocketed from P(Malaria) and P(Bacteria|Fever) also skyrocketed.  But now conditioned on fever, P(Malaria) and P(Fever) are back to dependent.  Because if we condition on fever, and you tell me there is malaria, then his P(Bacteria) drops a ton, because the fever is likely just explained by the malaria.\n",
+    "\n",
+    "##### 2. Example two\n",
+    "\n",
+    "1. In congress, is voting for gay marriage independent of voting for a graduated tax?\n",
+    "  a) Are they independent?  Does knowing if someone voted for gay marriage help you vote them.\n",
+    "  b) But now we know that someone is a democrat.  So now we can condition on it.  So now the previously dependent things will become independent.  So they are independent when conditioned on democratic.\n",
+    "  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Bayes Rule and Combinatorics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Khan Academy Problem of given that we pulled out a red marble, what is the probability of picking the correct bag."
    ]
   },
   {
@@ -21,8 +142,7 @@
     "### Resources\n",
     "\n",
     "https://www.math.lsu.edu/~madden/M3355spr2011/Lecture-6.pdf\n",
-    "\n",
-    "Khan Academy Problem of given that we pulled out a red marble, what is the probability of picking the correct bag."
+    "\n"
    ]
   },
   {
