update with assessment

--- a/module-2/9. Other Discrete Distributions.ipynb
+++ b/module-2/9. Other Discrete Distributions.ipynb
@@ -97,6 +97,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2. Other example \n",
+    "\n",
+    "Determine N = how many species remain \n",
+    "randomly tag m species \n",
+    "Then observe another n of the species \n",
+    "\n",
+    "X = number of tagged animals in observed group n \n",
+    "\n",
+    "X = HypG(n, N, m)\n",
+    "\n",
+    "Why is this difficult?\n",
+    "\n",
+    "1. We don't know big N - this is the size of species in our population\n",
+    "2. So now our world is an urn, and we tag m of these white and N -m non-white.  So then we draw n things out of our urn.  And X is the number of tagged animals that we got out.  \n",
+    "\n",
+    "So here we are given X, and need to solve for N.  \n",
+    "So we can solve by choosing a parameter N, that maximizes the likelihood of what we have seen.  \n",
+    "* So one way of figuring this out is to just try different values of N.\n",
+    "* Or can assume that number of animals we saw is the E[x], and from hypergeometric, $E[x] = nm/N$\n",
+    "\n",
+    "So now we choose a value, that maximizes a function.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### discrete distributions\n",
     "A. With a distribution, you generally get four things: \n",
     "* Parameters, \n",
