add python object relations assessment

--- a/module-2/11. Uniform and Normal Distribution.ipynb
+++ b/module-2/11. Uniform and Normal Distribution.ipynb
@@ -95,6 +95,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This capital value phi is cumulative density that the standard normal is less than a value phi."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the transform  $Z = \\frac{X - u}{\\sigma}$\n",
+    "\n",
+    "$F_x(x) = P(X < x) $\n",
+    "\n",
+    "So $F(x) = \\phi \\frac{x -u }{\\sigma}$\n",
+    "\n",
+    "Remember that phi of a negative number is the same as 1 - phi of a positive number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applications of gaussian"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* So now given a gaussian, N(3, 16), what is the P(X > 0)?\n",
+    "\n",
+    "$ Z = (0 - 3)/4 = P(Z > -3/4) = 1 - P(Z< 3/4)$\n",
+    "\n",
+    "And now $P(2 < X < 5)$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Example of a noisy signal\n",
+    "\n",
+    "So noise is a Y ~ N(0, 1), and voltage of 2 or -2 sent.  R = X + Y, where Y is noise.  \n",
+    "X is voltage sent.  \n",
+    "\n",
+    "P(Error of decoding | original bit = 1) = \n",
+    "P(Y < -1.5) = $\\phi(-1.5) = 1 - \\phi(1.5) = .0668$\n",
+    "\n",
+    "* Wires don't have this much noise in them, but GPS's do, because gov'ts insert noise so that people cannot figure out their exact location.\n",
+    "\n",
+    "> Now P(error | original bit a zero) = \n",
+    "\n",
+    "* .5 > -2 - X\n",
+    "\n",
+    "$P(X > 2.5) = 1 - \\phi(2.5)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 2. Example of Elo Ratings to predict basketball outomces  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each team has an ELO score S, calculated based on their past performance. And team has ability $ A ~ N(S, 200^2)$\n",
+    "\n",
+    "So both teams sample from their distribution.  So for the rockets is N(1555, 200), N(1797, 200).  So the variance is shared by everyone.  \n",
+    "\n",
+    "So note that even though we have a rating, we add variance.   \n",
+    "\n",
+    "* So can do this by sampling random variable (10k times) from both, and see where warriors is bigger.  Here we get .87.  \n",
+    "So now what is the probability they win the best of 7 series.  \n",
+    "\n",
+    "So use binomial, P(4) + P(5) + P(6) + P(7).\n",
+    "\n",
+    "* See the debugging probability section.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Example with Poll of Polls\n",
+    "\n",
+    "Take normal distribution for each.  \n",
+    "1. Say that each is an independent Gaussian (it's not because the two must sum up to 100)\n",
+    "2. Mean is weighted average of poll means, based on how much they believe each poll\n",
+    "3. Variance is weighted avg of poll trust \n",
+    "* So amount of variance they believe exists in those poll.  So then they do samples to see how often the bernie sanders is greater than HRC. \n",
+    "\n",
+    "So they did not know how to model their uncertainty, so they just assumed a gaussian.  (Bc that's the best when don't know how to model uncertainty).  \n",
+    "\n",
+    "To sample from a normal, can do rand(norm)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
