--- a/module-2/11. Uniform and Normal Distribution.ipynb
+++ b/module-2/11. Uniform and Normal Distribution.ipynb
@@ -31,6 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* We like the gaussian because it is the most conservative given the mean and the variance.  And doesn't make too many other assumptions.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$ X  =~ N(u, \\sigma ^2)$ "
    ]
   },
@@ -38,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So then $/sigma$ is the standard deviation.  So we have a probability density function. So then \n",
+    "So then $\\sigma$ is the standard deviation.  So we have a probability density function. So then \n",
     "\n",
     "f(x) = $\\frac{1}{\\sigma \\sqrt{2 \\pi}}* e^\\frac{{-(x - \\mu)^2}}{2\\sigma^2}$\n",
     "\n",
@@ -196,11 +203,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Other uses for the normal \n",
+    "\n",
+    "The normal is an approximation of the binomial with a large n.\n",
+    "\n",
+    "* Poisson: n large > 20, p small < .05.  And poisson allows us when we only know lambda, ie n*p.\n",
+    "\n",
+    "Normal, with mean equal to expectation of binomial, and variance equal to variance of binomial.  \n",
+    "If your variance is > 10, you have a pretty good approximation. \n",
+    "\n",
+    "But now remember that the binomial is discrete, so how do we find that it equals a particular value of x.  We go from 4.5 to 5.5 and say that is 5, by taking the area under the curve.   \n",
+    "* Called a continuity correction. \n",
+    "\n",
+    "\n",
+    "So if asking the P that warriors win 3 games, it's k between 2.5 and 3.5.  \n",
+    "So when n = 100, and p = .5, then the normal does a good job.  But the poisson does not.  P was not small enough for the poisson."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a b testing\n",
+    "\n",
+    "* 100 people given new website design\n",
+    "* X = # of people whose time on site increases\n",
+    "* CEO will endorse if X > 65.  What is P(CEO endorses change | no effect)?\n",
+    "\n",
+    "We can think of this as avg number of users who will increase, given that .5 chance someone will increase.  \n",
+    "\n",
+    "Normal where \n",
+    "* $\\mu = np = 50$\n",
+    "* $ np(1-p) = 25$\n",
+    "\n",
+    "So now we define a random variable with normal approximation that has N(50, 25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$P(Y > 64.5) = P(\\frac {Y-50}{5}) >  \\frac {64.5-50}{5}) = P(Z > 2.9) = 1 - \\phi(2.9) = .0019$ \n",
+    "\n",
+    "\n",
+    "And using the binomial we get .0018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Example stanford admissions \n",
+    "\n",
+    "* Stanford accepts 2480 students, with 68% of attending.  They only have 1745 beds.\n",
+    "* X = # of students who will attend\n",
+    "* P(X > 1745) \n",
+    "\n",
+    ">* mu = 2485*.68 = 1686.4\n",
+    ">* var = np*(1 - p) = mu*.32 = 540.8 \n",
+    ">* sd = 23.23\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ P(Y - 1686/23.5 > 1744.5 - 1686 / 23.25) = 1 - \\phi(65.5/23.5)$\n",
+    "\n",
+    "$1 -  \\phi(2.765)  = .0055 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exponential \n",
+    "\n",
+    "How much time do you have until an event happens.  It's like a continuous version of the geometric which we saw in the discrete world.  \n",
+    "\n",
+    "* Poisson: It's the same lambda used in the Poisson distribution.  In poisson, if this is the rate of events per time period, what is the probability of having a particular quanity of events in a given time period. \n",
+    "\n",
+    "* Exponential - What's the proabbility of having to wait a particular amount of time until the next event.  So then the probability of having to wait that long is an exponential decay over time.\n",
+    "\n",
+    "* $ E[X] = \\frac{1}{\\lambda}$ \n",
+    "* $ Var[X] = \\frac{1}{\\lambda^2}$\n",
+    "\n",
+    "Eg. Probability earthquake comes within one year, or that next request to webserver in next second, or how long until you end your cell phone contract (or say mad men that lucky strike defects, or a supreme court justice resigns, churn)\n",
+    "\n",
+    "**main point: P(X > s +t | X > s) = P(X > t)** \n",
+    "* So we don't care about how much time has passed, if we are conditioning on this.  So if we are 10 time frames from the beginning, it is almost as if we started from zero.\n",
+    "\n",
+    "* This is considered memoryless, in that it does not remember the past.  Proof?\n",
+    "* $P(X> s + t| X > s) = P(X > s + t and X > s | P(X > S) = P(X > s +t)/P(X > s)$  \n",
+    "* OR the P(X > s + t and X > s) = P(X > s + t)  ,as this is also greater than s.\n",
+    "\n",
+    "Eg. Visits to a website\n",
+    "On average a visitor leaves after five minutes.  So the average amount of time $E[X] = 1/\\lambda = 5$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Example Replacing the laptop\n",
+    "X = # of hours use until your laptop dies\n",
+    "* Probability the laptop lasts all four years\n",
+    "P(X > 5*365*4 = 7300) = 1 - F(7300) = .23 is chance that it lasts all four years.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what's the probability of lasting 5 years, given that it's lasted four years.  That just equals the probability of it lasting one more year.  \n",
+    "\n",
+    "Maybe laptops more likely to die as it gets older, then cannot use an exponential.  **But remember the article that says that humans are in fact exponential** \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
