--- a/module-2/9. Other Discrete Distributions.ipynb
+++ b/module-2/9. Other Discrete Distributions.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "### Poisson\n",
     "\n",
-    "So then the probability of something corrupted is smaller, because it doesn't have to go through all of space.  So we get $Bin(10^4, 10^-6)$, (so n is really large and probability is really small).  The problem is that these become unwieldy.  \n",
+    "* [Read this first](https://www.umass.edu/wsp/resources/poisson/index.html#binomial)\n",
+    "* So then the probability of something corrupted is smaller, because it doesn't have to go through all of space.  So we get $Bin(10^4, 10^-6)$, (so n is really large and probability is really small).  The problem is that these become unwieldy.  \n",
     "\n",
     "$ P(X = i) = \\frac{n!}{i!(n - i)!}p^i(1-p)^{n - i}$ \n",
     "\n",
